update to create 0.3.2, add flywheel. close #2

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,5 @@ mappings_version=20210601-mixed-1.16.5
 
 # Mod versions
 # probably update this https://www.curseforge.com/minecraft/mc-mods/create/files
-create_file_id=3278516
+create_file_id=3384222
+flywheel_version=1.16-0.1.0.21
