--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
     implementation fg.deobf("curse.maven:create-328085:${create_file_id}")
+    implementation fg.deobf("com.jozufozu.flywheel:Flywheel:${flywheel_version}")
 
     annotationProcessor 'org.spongepowered:mixin:0.8:processor'
 }
