- Update gradle to 6.9 - updated to forge gradle 4.1 - update mappings to official, as that is what create now uses - update disableRefMap to remapRefMap - added BuildConfig - reduced the places in which to change stuff - unified the stuff to change to yourname/yourmodid to make find/replace possible - added readme to mixin folder so the folder is tracked on github - fixed mixin definition (welp, i know i borked it myself in cog tweaker) - added debug print in build.gradle to display java environment (makes debugging easier as it tells about incorrect setup) - removed legacy cursemaven definition

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,12 +8,14 @@ forge_version=36.1.32
 # TODO: change this!
 mod_version=VERSION
 # TODO: change this!
-modid=youraddon
+modid=yourmodid
+# TODO: YOU
+author=yourname
 
 # Mappings
-mappings_channel = snapshot
+mappings_channel = official
 # probably update this? https://maven.tterrag.com/de/oceanlabs/mcp/mcp_snapshot/
-mappings_version=20210601-mixed-1.16.5
+mappings_version=1.16.5
 
 # Mod versions
 # probably update this https://www.curseforge.com/minecraft/mc-mods/create/files
