--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
-        jcenter()
         mavenCentral()
         maven {url='https://repo.spongepowered.org/maven'}
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
         classpath 'gradle.plugin.com.matthewprenger:CurseGradle:1.1.0'
         classpath 'com.wynprice.cursemaven:CurseMaven:2.1.3'
         classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
@@ -14,20 +13,22 @@ buildscript {
 }
 
 plugins {
-    id "com.wynprice.cursemaven" version "2.1.3"
+    id'com.github.gmazzo.buildconfig' version '3.0.1'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'com.matthewprenger.cursegradle'
-apply plugin: 'com.wynprice.cursemaven'
 apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'idea'
+apply plugin: 'eclipse'
 
-group = 'com.kotakotik' // TODO: change this!
+group = "mod.${author}.${modid}"
 version = "${minecraft_version}-${mod_version}"
 archivesBaseName = modid
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
+println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
     mappings channel: "${mappings_channel}", version: "${mappings_version}"
 
@@ -36,12 +37,10 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
-
-            jvmArgs "-Dmixin.env.disableRefMap=true"
-            arg "-mixin.config=youraddon.mixins.json" // TODO: change this
-
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+            arg "-mixin.config=${modid}.mixins.json".toString()
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
             property 'forge.logging.console.level', 'debug'
 
             mods {
@@ -53,12 +52,10 @@ minecraft {
 
         server {
             workingDirectory project.file('server')
-
-            jvmArgs "-Dmixin.env.disableRefMap=true"
-            arg "-mixin.config=youraddon.mixins.json" // TODO: change this
-
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+            arg "-mixin.config=${modid}.mixins.json".toString()
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
             property 'forge.logging.console.level', 'debug'
 
             mods {
@@ -70,14 +67,12 @@ minecraft {
 
         data {
             workingDirectory project.file('run')
-
-            jvmArgs "-Dmixin.env.disableRefMap=true"
-
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
             property 'forge.logging.console.level', 'debug'
 
-            args '--mod', modid, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args "--mod", modid, "--all", "--output", file('src/generated/resources/'), "--existing", file('src/main/resources/')
 
             mods {
                 "${modid}" {
@@ -100,6 +95,10 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    maven {
+        url 'https://jitpack.io/'
+    }
+
 }
 
 dependencies {
@@ -111,17 +110,19 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8:processor'
 }
 
+compileJava.options.encoding = 'UTF-8'
+
 jar {
     manifest {
         attributes([
                 "Specification-Title"     : modid,
-                "Specification-Vendor"    : "You", // TODO: change this!
+                "Specification-Vendor"    : author,
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.version,
-                "Implementation-Vendor"   : "You", // TODO: change this!
+                "Implementation-Vendor"   : author,
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "MixinConfigs"            : "${modid}.mixins.json" // TODO: change youraddon.mixins.json
+                "MixinConfigs"            : "${modid}.mixins.json"
         ])
     }
 }
@@ -148,3 +149,36 @@ artifacts {
 build.dependsOn deobfJar
 
 jar.finalizedBy('reobfJar')
+
+
+def getGitHash = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'rev-parse', '--short', 'HEAD'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+
+def hasUnstaged = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'status', '--porcelain'
+        standardOutput = stdout
+    }
+    def result = stdout.toString().replaceAll("M gradlew", "").trim()
+    if (!result.isEmpty())
+        println("Found stageable results:\n${result}\n")
+    return !result.isEmpty()
+}
+
+buildConfig {
+    buildConfigField 'String', 'MODID', "\"${modid}\""
+    buildConfigField 'String', 'VERSION', "\"${project.version}\""
+    def gitstage = "\"${getGitHash()}" + (hasUnstaged() ? "-modified" : "") + "\""
+    println("Using git stage ${gitstage}")
+    buildConfigField "String", "GITHASH", gitstage
+
+    version = project.version
+    packageName = project.group
+}
