--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ minecraft {
             workingDirectory project.file('run')
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-            arg "-mixin.config=${modid}.mixins.json".toString()
+            args "--debug", "--stacktrace", "--scan", "-mixin.config=${modid}.mixins.json".toString()
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'debug'
 
@@ -54,7 +54,7 @@ minecraft {
             workingDirectory project.file('server')
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-            arg "-mixin.config=${modid}.mixins.json".toString()
+            args "--debug", "--stacktrace", "--scan", "-mixin.config=${modid}.mixins.json".toString()
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'debug'
 
