--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,8 @@ mod_version=VERSION
 modid=yourmodid
 # TODO: YOU
 author=yourname
+# TODO: your mod's display name
+display_name = Create: Addon Template
 
 # Mappings
 mappings_channel = official
