--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -61,5 +61,5 @@ side = "BOTH"
 modId = "create"
 mandatory = true
 versionRange = "mc1.16.5_v0.3.1c" # TODO: probably update this, maybe to a version range https://maven.apache.org/enforcer/enforcer-rules/versionRanges.html
-ordering = "NONE"
+ordering = "AFTER"
 side = "BOTH"
