use new create repo and update create and flywheel

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,13 +12,14 @@ modid=yourmodid
 # TODO: YOU
 author=yourname
 # TODO: your mod's display name
-display_name = Create: Addon Template
+display_name=Create: Addon Template
 
 # Mappings
-mappings_channel = official
+mappings_channel=official
 mappings_version=1.16.5
 
 # Mod versions
-# probably update this https://www.curseforge.com/minecraft/mc-mods/create/files
-create_file_id=3406857
-flywheel_version=1.16-0.2.0.35
+# see available create versions at https://maven.tterrag.com/com/simibubi/create/Create/
+create_version=1.16.5_v0.3.2g+470
+# see available flywheel versions at https://maven.tterrag.com/com/jozufozu/flywheel/Flywheel/
+flywheel_version=1.16-0.2.4.50
