--- a/build.gradle
+++ b/build.gradle
@@ -104,7 +104,7 @@ repositories {
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf("curse.maven:create-328085:${create_file_id}")
+    implementation fg.deobf("com.simibubi.create:Create:mc${create_version}")
     implementation fg.deobf("com.jozufozu.flywheel:Flywheel:${flywheel_version}")
 
     annotationProcessor 'org.spongepowered:mixin:0.8:processor'
