--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Versions
-minecraft_version=1.16.5
+minecraft_version=1.18
 # probably update this?
-forge_version=36.2.0
+forge_version=38.0.17
 # TODO: change this!
 mod_version=VERSION
 # TODO: change this!
@@ -14,12 +14,9 @@ author=yourname
 # TODO: your mod's display name
 display_name=Create: Addon Template
 
-# Mappings
-mappings_channel=official
-mappings_version=1.16.5
-
 # Mod versions
 # see available create versions at https://maven.tterrag.com/com/simibubi/create/Create/
-create_version=1.16.5_v0.3.2g+470
+create_version=1.18_v0.4+15
+
 # see available flywheel versions at https://maven.tterrag.com/com/jozufozu/flywheel/Flywheel/
-flywheel_version=1.16-0.2.4.50
+flywheel_version=1.18-0.4.0.11
