--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -54,12 +54,12 @@ side = "BOTH"
 modId = "minecraft"
 mandatory = true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
-versionRange = "[1.16.5,1.17)"
+versionRange = "[1.18,1.19)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.yourmodid]]
 modId = "create"
 mandatory = true
-versionRange = "mc1.16.5_v0.3.1c" # TODO: probably update this, maybe to a version range https://maven.apache.org/enforcer/enforcer-rules/versionRanges.html
+versionRange = "[0.4, 0.4a)"
 ordering = "AFTER"
 side = "BOTH"
