--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,28 @@
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
         mavenCentral()
         maven {url='https://repo.spongepowered.org/maven'}
+        maven { url = 'https://maven.parchmentmc.org' }
+        maven { url = 'https://files.minecraftforge.net/maven' }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        classpath 'gradle.plugin.com.matthewprenger:CurseGradle:1.1.0'
-        classpath 'com.wynprice.cursemaven:CurseMaven:2.1.3'
         classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
+        classpath 'org.parchmentmc:librarian:1.+'
     }
 }
 
 plugins {
     id'com.github.gmazzo.buildconfig' version '3.0.1'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'com.matthewprenger.cursegradle'
+apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+apply from: 'https://raw.githubusercontent.com/LordGrimmauld/gitinfo-collect/master/build.gradle'
 
 group = "mod.${author}.${modid}"
 version = "${minecraft_version}-${mod_version}"
@@ -30,7 +32,9 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
-    mappings channel: "official", version: "${minecraft_version}"
+    // Mappings (official or parchment) is a matter of preference. Parchment does map some method parameters though while keeping Class-/Method-/Fieldnames same as official.
+    // mappings channel: "official", version: "${minecraft_version}"
+    mappings channel: 'parchment', version: "2022.07.10-${minecraft_version}" // https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/parchment-1.18.2/
 
      accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -83,17 +87,27 @@ minecraft {
     }
 }
 
+configurations {
+    shade
+}
+
+shadowJar {
+    configurations = [project.configurations.shade]
+    relocate 'com.tterrag.registrate', "${group}.registrate"
+}
+
+reobf {
+    shadowJar {}
+}
+
+build.dependsOn shadowJar
+build.dependsOn reobfShadowJar
+
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     maven {
         url "https://maven.tterrag.com/"
-    }
-    maven {
-        url "https://www.cursemaven.com"
-        content {
-            includeGroup "curse.maven"
-        }
     }
 }
 
@@ -103,7 +117,11 @@ dependencies {
     implementation fg.deobf("com.simibubi.create:Create:mc${create_version}")
     implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:${flywheel_version}")
 
-    annotationProcessor 'org.spongepowered:mixin:0.8:processor'
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+
+    def registrate = "com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"
+    implementation fg.deobf(registrate)
+    shade registrate
 }
 
 compileJava.options.encoding = 'UTF-8'
@@ -146,36 +164,16 @@ build.dependsOn deobfJar
 
 jar.finalizedBy('reobfJar')
 
-
-def getGitHash = { ->
-    def stdout = new ByteArrayOutputStream()
-    exec {
-        commandLine 'git', 'rev-parse', '--short', 'HEAD'
-        standardOutput = stdout
-    }
-    return stdout.toString().trim()
-}
-
-def hasUnstaged = { ->
-    def stdout = new ByteArrayOutputStream()
-    exec {
-        commandLine 'git', 'status', '--porcelain'
-        standardOutput = stdout
-    }
-    def result = stdout.toString().replaceAll("M gradlew", "").trim()
-    if (!result.isEmpty())
-        println("Found stageable results:\n${result}\n")
-    return !result.isEmpty()
-}
-
 buildConfig {
     buildConfigField 'String', 'MODID', "\"${modid}\""
     buildConfigField 'String', 'VERSION', "\"${project.version}\""
     buildConfigField 'String', 'DISPLAY_NAME', "\"${display_name}\""
-    def gitstage = "\"${getGitHash()}" + (hasUnstaged() ? "-modified" : "") + "\""
-    println("Using git stage ${gitstage}")
-    buildConfigField "String", "GITHASH", gitstage
+    buildConfigField "String", "GITHASH", "\"${getGitInfo()}\""
 
     version = project.version
     packageName = project.group
+}
+
+jar {
+    archiveClassifier.set('slim')
 }
