--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Versions
-minecraft_version=1.18
+minecraft_version=1.18.2
 # probably update this?
-forge_version=38.0.17
+forge_version=40.1.0
 # TODO: change this!
 mod_version=VERSION
 # TODO: change this!
@@ -16,7 +16,8 @@ display_name=Create: Addon Template
 
 # Mod versions
 # see available create versions at https://maven.tterrag.com/com/simibubi/create/Create/
-create_version=1.18_v0.4+15
+create_version=1.18.2_v0.5.0c+146
 
 # see available flywheel versions at https://maven.tterrag.com/com/jozufozu/flywheel/Flywheel-Forge/
-flywheel_version=1.18-0.4.0.11
+flywheel_version=1.18-0.6.4.87
+registrate_version=1.1.3
